# ucsd-psystem-vm

./: .gitignore  BUILDING  LICENSE  Makefile.in  README  aegis.conf  configure  meson.build
aegis.conf.d/: aemakegen  architecture  build  develop_end_policy  diff  file_template  history  merge  test  web
aegis.file.template/: c  cc  generic  h  main  man  sh  test.sh
bin2c/: main.c
debian/: changelog  control  copyright  rules  ucsd-psystem-vm.install
disk-images/: system.vol  utility.vol
etc/: autoconf.cook  buildimages.sh  building.man  change_log.man  check-tarball.sh  configure.ac  documentation.cook  howto.conf.in  howto.cook  makefile.file.sh  metrics.cook  new.sh  page-list.awk  ppa-upload.sh  readme.man  ref-ptx.ignore  ref-ptx.sh  ref-ptx1.awk  ref-ptx2.awk  reference.man  ssp.awk  tags.cook  ucsd-psystem-vm.lsm
float_conv/: main.c
lib/: byte_sex.c  byte_sex.h  config.h.in  diskio.c  diskio.h  gcc_attributes.h  memory.c  memory.h  meson.build  patchlevel.h  pcode.h  progname.c  progname.h  psystem.h  version.c  version.h  version_stamp.c  version_stamp.h
man/man1/: meson.build  ucsdpsys_svolcvt.1  ucsdpsys_svolio.1  ucsdpsys_vm.1  ucsdpsys_vm_license.1  ucsdpsys_xturtleserver.1
script/: test_prelude
test/00/: meson.build  t0001a.sh  t0002a.sh  t0003a.sh  t0005a.sh  t0006a.sh  t0007a.sh  t0008a.sh  t0009a.sh  t0010a.sh  t0011a.sh  t0012a.sh  t0015a.sh  t0016a.sh  t0017a.sh  t0018a.sh  t0019a.sh  t0020a.sh
turtle_graphics/: turt.asm.text  turtlegr.text
ucsdpsys_svolcvt/: main.c
ucsdpsys_svolio/: main.c
ucsdpsys_vm/: array.c  array.h  long_integer.c  long_integer.h  main.c  meson.build  native6502.c  native6502.h  printer.c  printer.h  ptrace.c  ptrace.h  search.c  search.h  sets.c  sets.h  stack.c  stack.h  term.c  term.h  turtlegr.c  turtlegr.h  unit_io.c
ucsdpsys_xturtleserver/: main.c  meson.build  system.charset.h
web/: download.html  icon.png.uue  index.html  module.cook
