env = environment()
env.prepend('PATH', fs.parent(vm_exe.full_path()))
env.prepend('PATH', meson.source_root() / 'script')

test('t0001a', sh, args : files('t0001a.sh'), env : env, depends : vm_exe)
test('t0002a', sh, args : files('t0002a.sh'), env : env, depends : vm_exe)
test('t0003a', sh, args : files('t0003a.sh'), env : env, depends : vm_exe)
test('t0005a', sh, args : files('t0005a.sh'), env : env, depends : vm_exe)
test('t0006a', sh, args : files('t0006a.sh'), env : env, depends : vm_exe)
test('t0007a', sh, args : files('t0007a.sh'), env : env, depends : vm_exe)
test('t0008a', sh, args : files('t0008a.sh'), env : env, depends : vm_exe)
test('t0009a', sh, args : files('t0009a.sh'), env : env, depends : vm_exe)
test('t0010a', sh, args : files('t0010a.sh'), env : env, depends : vm_exe)
test('t0011a', sh, args : files('t0011a.sh'), env : env, depends : vm_exe)
test('t0012a', sh, args : files('t0012a.sh'), env : env, depends : vm_exe)
test('t0015a', sh, args : files('t0015a.sh'), env : env, depends : vm_exe)
test('t0016a', sh, args : files('t0016a.sh'), env : env, depends : vm_exe)
test('t0017a', sh, args : files('t0017a.sh'), env : env, depends : vm_exe)
test('t0018a', sh, args : files('t0018a.sh'), env : env, depends : vm_exe)
test('t0019a', sh, args : files('t0019a.sh'), env : env, depends : vm_exe)
test('t0020a', sh, args : files('t0020a.sh'), env : env, depends : vm_exe)
